# dotfiles

./: .gitignore  AGENTS.md  BITWARDEN-SETUP.md  THEMING.md  configuration.nix  flake.nix  palatte.txt  starship.toml  sync.sh
alacritty/: alacritty.toml  alacritty.yml
btop/: btop.conf
certs/: caddy-root-ca.crt  homelab-ca.crt
desktopctl/: Cargo.toml  default.nix
desktopctl/src/: brightness.rs  hypr.rs  launch.rs  main.rs  night_light.rs  paths.rs  portal.rs  solar.rs  test_support.rs
desktopctl/src/daemon/: focus.rs  mod.rs  night_light.rs  server.rs  solar.rs
desktopctl/src/theme/: json.rs  mod.rs  orchestrator.rs  resolve.rs  schema.rs  wallpaper_browser.rs
desktopctl/src/theme/targets/: alacritty.rs  bat.rs  chromium.rs  color_utils.rs  cursor.rs  ghostty.rs  gtk.rs  gtksourceview.rs  helium.rs  hypr_appearance.rs  hyprland.rs  mod.rs  neovide.rs  neovim.rs  openchamber.rs  opencode.rs  qt.rs  quickshell.rs  scheme_pair.rs  snappy_switcher.rs  spicetify.rs  starship.rs  tmux.rs  vicinae.rs  vscode.rs  wallpaper.rs  where_is_my_sddm_theme.rs  zathura.rs  zed.rs  zsh.rs
docs/: autounattend.xml  distributed-builds.md  review-audit.md
doom/: init.el
dunst/: dunstrc
eww/: launch_bar
fish/: config.fish  fish_plugins  fish_variables
fontconfig/: fonts.conf
gtk-3.0/: bookmarks  settings.ini
home/: default.nix  fastfetch.nix  gtk.nix  packages.nix  shell.nix  sun-schedule.nix  xdg.nix
hypr/: hyprland.conf  hyprpaper.conf
kitty/: kitty.conf
laptop/: .gitignore
neofetch/: config.conf
nvim/: init.lua  lazy-lock.json
rofi/: config.rasi  (+2 more)
(+373 files in other folders)
